--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.1.3",
     "@astrojs/starlight": "^0.32.5",
     "astro": "^5.5.3",
     "sharp": "^0.32.5"
